--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "papaparse",
-	"version": "5.3.1",
+	"name": "lw-papaparse",
+	"version": "5.3.1-1",
 	"description": "Fast and powerful CSV parser for the browser that supports web workers and streaming large files. Converts CSV to JSON and JSON to CSV.",
 	"keywords": [
 		"csv",
@@ -27,7 +27,7 @@
 	"homepage": "http://papaparse.com",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mholt/PapaParse.git"
+		"url": "https://github.com/aleksandr-erin/PapaParse.git"
 	},
 	"author": {
 		"name": "Matthew Holt",
